# VECTIS

./: .env.example  .gitignore  Cargo.toml  README.md  hardhat.config.js  log.txt  package-lock.json  package.json  size.txt
artifacts/contracts/cpLinkVerifyBn128.sol/: cpLinkVerifyBn128.json
artifacts/contracts/verify.sol/: cpLinkVerify.dbg.json  cpLinkVerify.json
bcc-circuit/: Cargo.toml
bcc-circuit/logs/: test
bcc-circuit/src/: circuit.rs  lib.rs  tests.rs  utils.rs
bcc-groth16/: Cargo.toml  README.md
bcc-groth16/src/: bcc_snark.rs  data_structures.rs  generator.rs  lib.rs  prover.rs  transcript.rs  verifier.rs
bcc-groth16/src/crypto/: mod.rs
bcc-groth16/src/crypto/commitment/: constraints.rs  mod.rs
bcc-groth16/src/crypto/commitment2/: constraints.rs  mod.rs
bcc-groth16/src/crypto/tree/: mod.rs
bcc-groth16/src/utils/: mod.rs
cache/: .hardhat-network-instances.json  solidity-files-cache.json
cc-gro/: Cargo.toml
cc-gro/src/: cc_snark.rs  data_structures.rs  generator.rs  lib.rs  prover.rs  verifier.rs
contract/: .gitignore  hardhat.config.ts  package-lock.json  package.json
contract/contracts/: BccSNARK.sol  Bn128.sol  CommitTree.sol  Math.sol  ccGroth16VerifyBn128.sol
contract/ignition/modules/: deploy.ts
contract/scripts/: deploy.ts
contract/test/: mock.ts  result.ts  tps.ts
contract/test/mock/: batch1024.ts  batch128.ts  batch16.ts  batch2.ts  batch256.ts  batch32.ts  batch4.ts  batch512.ts  batch64.ts  batch8.ts  index.ts
contracts/: ccGroth16VerifyBn128.sol  cpLinkVerifyBn128.sol  legoGroth16.sol  verify.sol
groth16/: Cargo.toml
groth16/src/: circuit.rs  lib.rs  tests.rs
groth16/src/commitments/: constraints.rs  mod.rs
ignition/modules/: deploy.js
logs/: log.batch.txt  log.naive.txt  log.txt
scripts/: deploy.js  sendTx.js
src/: circuit.rs  commitment.rs  data_structures.rs  error.rs  generator.rs  lib.rs  mock.rs  prover.rs  snark.rs  test.rs  tests.rs  util.rs  verifier.rs
src/constraint_system/: arithmetic.rs  boolean.rs  composer.rs  helper.rs  mod.rs
src/constraint_system/ecc/: mod.rs
src/constraint_system/ecc/curve_addition/: fixed_base_gate.rs  variable_base_gate.rs
src/constraint_system/ecc/scalar_mul/: fixed_base.rs  variable_base.rs
src/crypto/: mod.rs
src/crypto/commitment/: constraints.rs  mod.rs
src/crypto/commitment/pedersen/: constraints.rs  mod.rs
src/crypto/protocol/: mod.rs
src/crypto/protocol/sigma/: mod.rs
src/crypto/protocol/transcript/: mod.rs  sha3.rs
src/gadgets/: batch_pedersen.rs  mod.rs  pedersen.rs
src/gro/: data_structures.rs  generator.rs  mod.rs  prover.rs  verifier.rs
src/linker/: mod.rs
src/linker/am_com_eq/: data_structure.rs  errors.rs  generator.rs  mod.rs  prover.rs  verifier.rs
src/linker/am_eq/: data_structure.rs  mod.rs  prover.rs  verifier.rs
src/linker/comp_am_com_eq/: data_structure.rs  generator.rs  mod.rs  prover.rs  verifier.rs
src/linker/comp_dl_eq/: data_structure.rs  generator.rs  mod.rs  prover.rs  verifier.rs
src/permutation/: mod.rs
src/poly_commit/: data_structures.rs  error.rs  mod.rs  util.rs
src/poly_commit/kzg10/: data_structures.rs  mod.rs
src/poly_commit/sonic_pc/: data_structures.rs  mod.rs
src/proof_system/: aux.rs  cw.rs  linearisation_poly.rs  mod.rs  pd_cm.rs  permutation.rs  pi.rs  preprocess.rs  proof.rs  prover.rs  quotient_poly.rs  verifier.rs
src/proof_system/widget/: arithmetic.rs  mod.rs
src/proof_system/widget/ecc/: curve_addition.rs  fixed_base_scalar_mul.rs
src/solidity/: mod.rs  short_weierstrass.rs  twisted_edwards.rs
src/tests/: circuit.rs  linker.rs  mod.rs  utils.rs
test/: mock-1.json  mock-1024.json  mock-128.json  mock-16.json  mock-2.json  mock-256.json  mock-32.json  mock-4.json  mock-512.json  mock-64.json  mock-8.json  mockDataLog.txt  mockVerifierInput.json  parse.js  test.js  type.js
