[package]
name = "lego16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.4.1", default-features = false }
ark-ec = { version = "^0.4.1", default-features = false }
ark-std = { version = "^0.4.0", default-features = false}
ark-poly = { version = "^0.4.1", default-features = false }
ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }
ark-relations = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
ark-groth16 = { version = "^0.4.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }
derivative = { version = "2.0", features = ["use_core"], optional = true }
rayon = { version = "1" }
fnv = { version = "1.0.3", default-features = false, optional = true }
num-bigint = { version = "0.4", default-features = false, optional = true }
log = "0.4"
ark-snark = { version = "^0.4.0", default-features = false, optional = true }
dock_crypto_utils = { version = "0.17.0", default-features = false}

[dev-dependencies]
csv = { version = "1" }
ark-bn254 = { version = "^0.4.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = ["curve"] }
ark-bls12-377 = { version = "^0.4.0", default-features = false, features = ["curve"] }
ark-cp6-782 = { version = "^0.4.0", default-features = false }
ark-mnt4-298 = { version = "^0.4.0", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-298 = { version = "^0.4.0", default-features = false, features = ["r1cs"] }
ark-mnt4-753 = { version = "^0.4.0", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-753 = { version = "^0.4.0", default-features = false, features = ["r1cs"] }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
hex-literal = "0.2.1"
serde_json = "1.0.64"

[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-std/std", "ark-groth16/std", "dock_crypto_utils/std" ]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-groth16/parallel", "dock_crypto_utils/parallel"]
print-trace = [ "ark-std/print-trace" ]
mock = []