[package]
name = "cc-snark"
version = "0.1.0"
authors = ["kwonhojeong@hanyang.ac.kr", "sunjbs98@gmail.com"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false, features = [
    "derive",
] }
ark-poly = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
    "snark",
    "sponge",
] }
ark-r1cs-std = { version = "0.4.0", default-features = false, optional = true }
ark-groth16 = { version = "0.4.0", default-features = false, optional = true }

tracing = { version = "0.1", default-features = false, features = [
    "attributes",
], optional = true }
derivative = { version = "2.0", features = ["use_core"], optional = true }

rayon = { version = "1", optional = true }
serde_json = "1.0.108"
sha3 = "0.10.8"

[dev-dependencies]
lazy_static = "1.4.0"
dotenv = "0.15.0"
ark-bn254 = "0.4.0"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[features]
default = ["parallel", "r1cs", "std"]
std = [
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "ark-relations/std",
    "ark-crypto-primitives/std",
    "ark-std/std",
    "ark-groth16/std",
]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-ec/parallel",
    "ark-crypto-primitives/parallel",
    "ark-std/parallel",
    "ark-groth16/parallel",
    "rayon",
]
r1cs = [
    "ark-crypto-primitives/r1cs",
    "ark-groth16/r1cs",
    "ark-r1cs-std",
    "tracing",
    "derivative",
]
print-trace = ["ark-std/print-trace"]
