[package]
name = "cbdc-circuit"
version = "0.1.0"
authors = ["kwonhojeong@hanyang.ac.kr", "sunjbs98@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-crypto-primitives = { version = "0.4.0", default-features = true, features = [
    "r1cs",
    "snark",
] }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"

lazy_static = "1.4.0"

tracing = { version = "0.1", default-features = false, features = [
    "attributes",
], optional = true }
ark-bls12-377 = "0.4.0"
ark-bn254 = "0.4.0"
sha3 = "0.10.8"
serde_json = "1.0.108"
hex = "0.4.3"
rand = "0.8"

bcc-groth16 = { "path" = "../bcc-groth16" }
serde = { version = "1.0.197", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[features]
default = ["ark-crypto-primitives/r1cs", "ark-crypto-primitives/snark"]
print-trace = ["ark-std/print-trace"]

[lib]
name = "circuit"
crate-type = ["cdylib"]
