[package]
name = "groth16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-r1cs-std = { version = "0.4.0", default-features = false, optional = true }
ark-ff = { version = "0.4.2", default-features = false }
ark-ec = { version = "^0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false, features = [
    "derive",
] }
ark-poly = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
    "snark",
    "sponge",
] }
ark-groth16 = "0.4.0"

lazy_static = "1.4.0"

tracing = { version = "0.1", default-features = false, features = [
    "attributes",
], optional = true }
ark-bn254 = { version = "^0.4.0", features = ["curve"] }
ark-ed-on-bn254 = { version = "^0.4.0", features = ["r1cs"] }
sha3 = "0.10.8"
serde_json = "1.0.108"
hex = "0.4.3"
rand = "0.8"

derivative = { version = "2.0", features = ["use_core"], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
rayon = { version = "1", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[features]
default = ["parallel", "r1cs", "std"]
std = [
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "ark-relations/std",
    "ark-crypto-primitives/std",
    "ark-std/std",
]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-ec/parallel",
    "ark-crypto-primitives/parallel",
    "ark-std/parallel",
    "rayon",
]
r1cs = ["ark-crypto-primitives/r1cs", "ark-r1cs-std", "tracing", "derivative"]
print-trace = ["ark-std/print-trace"]

[lib]
name = "groth16"
crate-type = ["lib"]
